hphp/test/zend/bad/ext-mbstring/zend_multibyte-12.php
<?php
declare(encoding="ISO-8859-15");
echo 1;
declare(encoding="ISO-8859-1");
?>